--- a/index.html
+++ b/index.html
@@ -186,21 +186,21 @@
           <h3 class="enroll-step-title"><span>02</span> Select Modules</h3>
           <div class="course-selection-list" id="popupCourseList">
             <label class="course-checkbox-card">
-              <input type="checkbox" data-name="Pattern Making" data-price="15" value="Pattern Making">
+              <input type="checkbox" data-name="Pattern Making & Draping" data-price="15" value="Pattern Making">
               <div class="checkbox-custom"></div>
               <span class="course-name">Pattern Making & Draping</span>
               <span class="course-cost">$15</span>
             </label>
             <label class="course-checkbox-card">
-              <input type="checkbox" data-name="Digital CAD" data-price="15" value="Digital CAD">
+              <input type="checkbox" data-name="Digital CAD (CLO 3D) & Adobe Illustrator" data-price="15" value="Digital CAD">
               <div class="checkbox-custom"></div>
-              <span class="course-name">Digital CAD (CLO 3D)</span>
+              <span class="course-name">Digital CAD (CLO 3D) & Adobe Illustrator</span>
               <span class="course-cost">$15</span>
             </label>
             <label class="course-checkbox-card">
-              <input type="checkbox" data-name="Fashion Sketching" data-price="15" value="Fashion Sketching">
+              <input type="checkbox" data-name="Fashion Sketching & Illustration" data-price="15" value="Fashion Sketching">
               <div class="checkbox-custom"></div>
-              <span class="course-name">Fashion Illustration</span>
+              <span class="course-name">Fashion Sketching & Illustration</span>
               <span class="course-cost">$15</span>
             </label>
           </div>
