--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <title>Xarago Fashion Academy</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#d4af37">
+<meta name="apple-mobile-web-app-capable" content="yes">
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js')
+        .then(reg => console.log('Xarago App Registered!', reg))
+        .catch(err => console.log('Registration Failed', err));
+    });
+  }
+</script>
 </head>
 <body>
 
