--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
       <p class="footer-tagline">Where tradition meets the future of design.</p>
       <button class="newsletter-btn" id="openNewsletterBtn">Subscribe to Newsletter</button>
     </div>
+    <div class="footer-content">
+  <button id="pwaInstallBtn" class="cta-mini" style="display: none; background: #d4af37; margin-top: 10px; border: none;">
+    Install Xarago App
+  </button>
+  </div>
   </footer>
 
   <div id="courseModal" class="modal-overlay" style="display: none;">
