--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        // Changed '/sw.js' to 'sw.js' to fix 404 on GitHub Pages
         navigator.serviceWorker.register('sw.js')
           .then(reg => console.log('Xarago App Registered!', reg))
           .catch(err => console.log('Registration Failed', err));
@@ -121,7 +120,7 @@
     <h2 class="section-title" style="text-align: center;">Visit the XARAGO HQ</h2>
     <div class="contact-grid">
       <div class="map-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3869.608753234979!2d44.064!3d9.56!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zOcKwMzMnMzYuMCJOIDQ0wrAwMyc1MC40IkU!5e0!3m2!1sen!2s!4v1630000000000" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="http://googleusercontent.com/maps.google.com/3" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
       <div class="contact-info">
         <h3>XARAGO HQ</h3>
@@ -143,12 +142,11 @@
       </div>
       <p class="footer-tagline">Where tradition meets the future of design.</p>
       <button class="newsletter-btn" id="openNewsletterBtn">Subscribe to Newsletter</button>
+      
+      <button id="pwaInstallBtn" class="cta-mini" style="display: none; background: #d4af37; margin-top: 15px; border: none; cursor: pointer;">
+        Install Xarago App
+      </button>
     </div>
-    <div class="footer-content">
-  <button id="pwaInstallBtn" class="cta-mini" style="display: none; background: #d4af37; margin-top: 10px; border: none;">
-    Install Xarago App
-  </button>
-  </div>
   </footer>
 
   <div id="courseModal" class="modal-overlay" style="display: none;">
@@ -227,7 +225,7 @@
               <span class="course-name">Fashion Sketching & Illustration</span>
               <span class="course-cost">$15</span>
             </label>
-            </div>
+          </div>
 
           <div class="tuition-summary">
             <div class="summary-header">Tuition Summary</div>
@@ -240,6 +238,16 @@
           </div>
         </div>
       </form>
+    </div>
+  </div>
+
+  <div id="newsletterPopup" class="popup-overlay" style="display: none;">
+    <div class="popup-content" style="max-width: 400px; text-align: center; padding: 40px;">
+      <span class="close-popup" style="position: absolute; top: 15px; right: 20px; cursor: pointer; font-size: 1.5rem;">×</span>
+      <h2 style="font-family: 'Playfair Display', serif; margin-bottom: 10px;">Join the Atelier</h2>
+      <p style="color: #666; margin-bottom: 20px;">Get exclusive fashion insights and course updates delivered to your inbox.</p>
+      <input type="email" placeholder="Your Email Address" style="width: 100%; padding: 12px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 4px;">
+      <button class="btn-primary" style="width: 100%;">Join Now</button>
     </div>
   </div>
 
