--- a/index.html
+++ b/index.html
@@ -133,21 +133,34 @@
 
   <footer class="main-footer">
     <div class="footer-content">
-      <div class="footer-logo">XARAGO ACADEMY</div>
-      <div class="social-links">
-        <a href="#"><img src="assets/icon-ig.png" alt="Instagram"></a>
-        <a href="#"><img src="assets/icon-pin.png" alt="Pinterest"></a>
-        <a href="#"><img src="assets/icon-fb.png" alt="Facebook"></a>
-        <a href="#"><img src="assets/icon-wh.png" alt="WhatsApp"></a>
-      </div>
-      <p class="footer-tagline">Where tradition meets the future of design.</p>
-      <button class="newsletter-btn" id="openNewsletterBtn">Subscribe to Newsletter</button>
-      
-      <button id="pwaInstallBtn" class="cta-mini" style="display: none; background: #d4af37; margin-top: 15px; border: none; cursor: pointer;">
-        Install Xarago App
-      </button>
+        <div class="footer-logo">XARAGO ACADEMY</div>
+        <div class="social-links">
+            <a href="#"><img src="assets/icon-ig.png" alt="Instagram"></a>
+            <a href="#"><img src="assets/icon-pin.png" alt="Pinterest"></a>
+            <a href="#"><img src="assets/icon-fb.png" alt="Facebook"></a>
+            <a href="#"><img src="assets/icon-wh.png" alt="WhatsApp"></a>
+        </div>
+        <p class="footer-tagline">Where tradition meets the future of design.</p>
+        <button class="newsletter-btn" id="openNewsletterBtn">Subscribe to Newsletter</button>
+        
+        <button id="pwaInstallBtn" class="cta-mini" style="display: none; background: #d4af37; margin-top: 15px; border: none; cursor: pointer;">
+            Install Xarago App
+        </button>
     </div>
-  </footer>
+
+    <div class="footer-bottom">
+        <div class="footer-bottom-content">
+            <p>&copy; 2025 XARAGO Fashion Academy. All Rights Reserved.</p>
+            <div class="legal-links">
+                <a href="#">Privacy Policy</a>
+                <span class="separator">|</span>
+                <a href="#">Terms of Service</a>
+                <span class="separator">|</span>
+                <a href="#contact">Support</a>
+            </div>
+        </div>
+    </div>
+</footer>
 
   <div id="courseModal" class="modal-overlay" style="display: none;">
     <div class="modal-content">
