--- a/index.html
+++ b/index.html
@@ -110,6 +110,38 @@
       </div>
     </div>
   </section>
+  <section id="methodology" class="methodology-section">
+  <div class="container">
+    <span class="section-subtitle">How We Teach</span>
+    <h2 class="section-title">The Xarago Methodology</h2>
+    
+    <div class="method-grid">
+      <div class="method-card">
+        <div class="method-number">01</div>
+        <h3>Creative Anatomy</h3>
+        <p>Understanding the human form and translating conceptual sketches into technical illustrations using Adobe Illustrator.</p>
+      </div>
+
+      <div class="method-card">
+        <div class="method-number">02</div>
+        <h3>Pattern Architecture</h3>
+        <p>Moving beyond basic sewing to structural pattern drafting and Savile Row draping techniques.</p>
+      </div>
+
+      <div class="method-card">
+        <div class="method-number">03</div>
+        <h3>Digital Twin (CLO 3D)</h3>
+        <p>Reducing waste through 3D prototyping. Students learn to simulate fabrics and fit in a virtual environment.</p>
+      </div>
+
+      <div class="method-card">
+        <div class="method-number">04</div>
+        <h3>The Masterpiece</h3>
+        <p>Construction of a capsule collection that meets international luxury standards for your professional portfolio.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
   <section id="portfolio" class="portfolio">
     <h2 class="section-title">Student Work</h2>
