--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       });
     }
   </script>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
 
@@ -152,7 +153,14 @@
     <h2 class="section-title" style="text-align: center;">Visit the XARAGO HQ</h2>
     <div class="contact-grid">
       <div class="map-container">
-        <iframe src="http://googleusercontent.com/maps.google.com/3" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124013.9189441113!2d44.0016429!3d9.562389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3d0016027c653457%3A0x6b107038e2f69f2e!2sHargeisa!5e0!3m2!1sen!2sso!4v1710000000000!5m2!1sen!2sso" 
+  width="100%" 
+  height="450" 
+  style="border:0;" 
+  allowfullscreen="" 
+  loading="lazy">
+</iframe>
       </div>
       <div class="contact-info">
         <h3>XARAGO HQ</h3>
