--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           At XARAGO, we bridge the gap between traditional craftsmanship and the digital future of fashion. 
         </p>
         <p class="secondary-text">
-          Founded in the heart of Hargeisa, our academy is a sanctuary for designers who seek to master the architecture of clothing. From the first sketch to the final 3D prototype, we provide the tools to turn a creative vision into a global brand.
+          Founded in the heart of Hargeisa, our academy is a sanctuary for designers who seek to master the architecture of clothing.
         </p>
 
         <div class="about-stats-grid">
@@ -103,49 +103,44 @@
               <p>Our founder realized that while the talent in the region was immense, the access to modern tools like 3D CAD was limited.</p>
               <h3>The Digital Evolution</h3>
               <p>In 2022, we became the first academy to integrate CLO 3D software.</p>
-              <h3>Today & Beyond</h3>
-              <p>We remain committed to the stitch, the silhouette, and the student.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
   <section id="methodology" class="methodology-section">
-  <div class="container">
-    <span class="section-subtitle">How We Teach</span>
-    <h2 class="section-title">The Xarago Methodology</h2>
-    
-    <div class="method-grid">
-      <div class="method-card">
-        <div class="method-number">01</div>
-        <h3>Creative Anatomy</h3>
-        <p>Understanding the human form and translating conceptual sketches into technical illustrations using Adobe Illustrator.</p>
-      </div>
-
-      <div class="method-card">
-        <div class="method-number">02</div>
-        <h3>Pattern Architecture</h3>
-        <p>Moving beyond basic sewing to structural pattern drafting and Savile Row draping techniques.</p>
-      </div>
-
-      <div class="method-card">
-        <div class="method-number">03</div>
-        <h3>Digital Twin (CLO 3D)</h3>
-        <p>Reducing waste through 3D prototyping. Students learn to simulate fabrics and fit in a virtual environment.</p>
-      </div>
-
-      <div class="method-card">
-        <div class="method-number">04</div>
-        <h3>The Masterpiece</h3>
-        <p>Construction of a capsule collection that meets international luxury standards for your professional portfolio.</p>
+    <div class="container">
+      <span class="section-subtitle">How We Teach</span>
+      <h2 class="section-title">The Xarago Methodology</h2>
+      <div class="method-grid">
+        <div class="method-card">
+          <div class="method-number">01</div>
+          <h3>Creative Anatomy</h3>
+          <p>Understanding the human form and translating conceptual sketches.</p>
+        </div>
+        <div class="method-card">
+          <div class="method-number">02</div>
+          <h3>Pattern Architecture</h3>
+          <p>Moving beyond basic sewing to structural pattern drafting.</p>
+        </div>
+        <div class="method-card">
+          <div class="method-number">03</div>
+          <h3>Digital Twin (CLO 3D)</h3>
+          <p>Reducing waste through 3D prototyping and virtual fabric simulation.</p>
+        </div>
+        <div class="method-card">
+          <div class="method-number">04</div>
+          <h3>The Masterpiece</h3>
+          <p>Construction of a capsule collection that meets international luxury standards.</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <section id="portfolio" class="portfolio">
-    <h2 class="section-title">Student Work</h2>
+    <h2 class="section-title" style="text-align: center;">Student Work</h2>
     <div class="gallery-grid" id="studentGallery"></div>
   </section>
 
@@ -154,13 +149,13 @@
     <div class="contact-grid">
       <div class="map-container">
         <iframe 
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124013.9189441113!2d44.0016429!3d9.562389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3d0016027c653457%3A0x6b107038e2f69f2e!2sHargeisa!5e0!3m2!1sen!2sso!4v1710000000000!5m2!1sen!2sso" 
-  width="100%" 
-  height="450" 
-  style="border:0;" 
-  allowfullscreen="" 
-  loading="lazy">
-</iframe>
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15745.333202166667!2d44.06!3d9.56!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zOcKwMzMnMzYuMCJOIDQ0wrAwMyczNi4wIkU!5e0!3m2!1sen!2sso!4v1620000000000!5m2!1sen!2sso" 
+          width="100%" 
+          height="450" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy">
+        </iframe>
       </div>
       <div class="contact-info">
         <h3>XARAGO HQ</h3>
@@ -190,7 +185,7 @@
 
     <div class="footer-bottom">
         <div class="footer-bottom-content">
-            <p>&copy; 2025 XARAGO Fashion Academy. All Rights Reserved.</p>
+            <p>© 2025 XARAGO Fashion Academy. All Rights Reserved.</p>
             <div class="legal-links">
                 <a href="#">Privacy Policy</a>
                 <span class="separator">|</span>
@@ -243,18 +238,6 @@
             <label>Email Address</label>
             <input type="email" id="enrollEmail" placeholder="email@example.com" required>
           </div>
-          <div class="input-group">
-            <label>Phone Number</label>
-            <input type="tel" placeholder="+252 ...">
-          </div>
-          <div class="input-group">
-            <label>Experience Level</label>
-            <select>
-              <option>Beginner</option>
-              <option>Intermediate</option>
-              <option>Advanced</option>
-            </select>
-          </div>
         </div>
 
         <div class="enroll-section">
@@ -267,15 +250,9 @@
               <span class="course-cost">$15</span>
             </label>
             <label class="course-checkbox-card">
-              <input type="checkbox" data-name="Digital CAD (CLO 3D) & Adobe Illustrator" data-price="15" value="Digital CAD (CLO 3D) & Adobe Illustrator">
+              <input type="checkbox" data-name="Digital CAD & Illustrator" data-price="15" value="Digital CAD & Illustrator">
               <div class="checkbox-custom"></div>
               <span class="course-name">Digital CAD & Illustrator</span>
-              <span class="course-cost">$15</span>
-            </label>
-            <label class="course-checkbox-card">
-              <input type="checkbox" data-name="Fashion Sketching & Illustration" data-price="15" value="Fashion Sketching & Illustration">
-              <div class="checkbox-custom"></div>
-              <span class="course-name">Fashion Sketching & Illustration</span>
               <span class="course-cost">$15</span>
             </label>
           </div>
@@ -296,9 +273,9 @@
 
   <div id="newsletterPopup" class="popup-overlay" style="display: none;">
     <div class="popup-content">
-        <span class="close-popup" onclick="this.parentElement.parentElement.style.display='none'">×</span>
+        <span class="close-popup">×</span>
         <h2>The Xarago Circle</h2>
-        <p>Subscribe to receive invitations to our digital runway shows and exclusive curriculum updates.</p>
+        <p>Subscribe for exclusive runway updates.</p>
         <form id="newsletterForm">
             <input type="email" placeholder="EMAIL ADDRESS" required>
             <button type="submit" class="btn-primary">Subscribe</button>
@@ -320,7 +297,6 @@
       appId: "1:477275067482:web:72a5cadb56d2c34526b463"
     };
     firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
   </script>
 
   <script src="script.js"></script>
