--- a/index.html
+++ b/index.html
@@ -239,23 +239,45 @@
             <input type="email" id="enrollEmail" placeholder="email@example.com" required>
           </div>
         </div>
+        <div class="input-group">
+            <label>Phone Number</label>
+            <input type="tel" id="enrollPhone" placeholder="+252 (63) 000-0000" required>
+        </div>
 
         <div class="enroll-section">
           <h3 class="enroll-step-title"><span>02</span> Select Modules</h3>
           <div class="course-selection-list" id="popupCourseList">
-            <label class="course-checkbox-card">
-              <input type="checkbox" data-name="Pattern Making & Draping" data-price="15" value="Pattern Making & Draping">
-              <div class="checkbox-custom"></div>
-              <span class="course-name">Pattern Making & Draping</span>
-              <span class="course-cost">$15</span>
-            </label>
-            <label class="course-checkbox-card">
-              <input type="checkbox" data-name="Digital CAD & Illustrator" data-price="15" value="Digital CAD & Illustrator">
-              <div class="checkbox-custom"></div>
-              <span class="course-name">Digital CAD & Illustrator</span>
-              <span class="course-cost">$15</span>
-            </label>
-          </div>
+    <label class="course-checkbox-card">
+        <input type="checkbox" data-name="Pattern Making & Draping" data-price="15">
+        <span class="course-name">Pattern Making & Draping</span>
+        <span class="course-cost">$15</span>
+    </label>
+    <label class="course-checkbox-card">
+        <input type="checkbox" data-name="Digital CAD & Illustrator" data-price="15">
+        <span class="course-name">Digital CAD & Illustrator</span>
+        <span class="course-cost">$15</span>
+    </label>
+    <label class="course-checkbox-card">
+        <input type="checkbox" data-name="Fashion Sketching & Illustration" data-price="15">
+        <span class="course-name">Fashion Sketching & Illustration</span>
+        <span class="course-cost">$15</span>
+    </label>
+    <label class="course-checkbox-card">
+        <input type="checkbox" data-name="Fabric and Textile Knowledge" data-price="15">
+        <span class="course-name">Fabric and Textile Knowledge</span>
+        <span class="course-cost">$15</span>
+    </label>
+    <label class="course-checkbox-card">
+        <input type="checkbox" data-name="Fashion Styling & Branding" data-price="15">
+        <span class="course-name">Fashion Styling & Branding</span>
+        <span class="course-cost">$15</span>
+    </label>
+    <label class="course-checkbox-card">
+        <input type="checkbox" data-name="Garment Construction" data-price="15">
+        <span class="course-name">Garment Construction</span>
+        <span class="course-cost">$15</span>
+    </label>
+</div>
 
           <div class="tuition-summary">
             <div class="summary-header">Tuition Summary</div>
